--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Random Quote Generator</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="Assets/favicon_io/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <h2>Random Quote Generator</h2>
@@ -30,7 +31,7 @@
   <button id="stop">Stop Timer</button>
 
   <p id="six">Exercise Six, simple calculator.</p>
-  <div>
+  <div id="calculator">
     <input type="number" id="num1" placeholder="Enter first number">
     <input type="number" id="num2" placeholder="Enter second number">
     <select id="operation">
