--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Random Quote Generator</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="Assets/favicon_io/favicon.ico" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <h2>Random Quote Generator</h2>
